# gridironIQ

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
.streamlit/: config.toml
app/: streamlit_app.py
frontend/: README.md
gridiron/: __init__.py  config.py  db.py
gridiron/filmroom/: __init__.py  breakdown.py  matchup.py  pbp_metrics.py
gridiron/ingestion/: __init__.py  cap_data.py  espn_roster.py  load_cap.py  reference.py  rosters.py  schedules.py
gridiron/modeling/: __init__.py  cap_efficiency.py  clustering.py  free_agents.py  ml_pipeline.py  organization.py  roster_strength.py  sb_maxer.py
scripts/: crosscheck_rosters.py  refresh_rosters.py  run_cap_etl.py  run_filmroom.py
sql/: 01_schema.sql  02_views.sql
