[project]
name = "gridiron-iq"
version = "0.1.0"
description = "NFL cap-efficiency (Boardroom) and post-game film (Film Room) analytics."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    # --- data + storage ---
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",          # read nflverse parquet release assets
    "requests>=2.31",
    "SQLAlchemy>=2.0",
    # --- modeling / viz (Boardroom) ---
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    # --- Film Room natural-language layer ---
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    # --- app ---
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gridiron*"]

[tool.ruff]
line-length = 90
target-version = "py310"
